service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-cicd-app
  namespace: eks-cicd

spec:
  type: ClusterIP

  selector:
    app: eks-cicd-app

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
